fix: fix for pager improperly displayed on small devices

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -82,4 +82,13 @@ body{
   .container{
     padding-top: 70px;
   }
+  .pager-pre{
+    flex: 1 1 35%;
+  }
+  .pager-num{
+    flex: 1 1 30%;
+  }
+  .pager-next{
+    flex: 1 1 35%;
+  }
 }
